--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,17 @@
 
 }
 .flex-container{
-    display:block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.board{
+    border-style: solid;
+    border-width: 3px;
+    border-color:black;
+}
+.title{
+padding-bottom: 50px;    
+    
 }
